K1J-1777: Rename GetSentMessageInternalService to GetSentMessageCountInternalService and update related references